added some functions

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <label for="score">
             <p>Score</p>
-            <input class="fields" type="text" name="score" id="score" placeholder="Enter your score here...">
+            <input class="fields" type="number" name="score" id="score" placeholder="Enter your score here...">
         </label>
 
         <button id="addcourse">ADD COURSE <i class="fas fa-plus-square fa-2x"></i> </button>
@@ -48,7 +48,7 @@
             <p>SCORE</p>
             <p>GRADE</p>
         </div>
-        <div class="dark">
+        <!-- <div class="dark">
             <p>ABC123</p>
             <p>2</p>
             <p>80</p>
@@ -63,7 +63,7 @@
             <p>A</p>
             <button class="modify button" data-code='ABC123'>Modify</button>
             <button class="delete button" data-code='ABC123'>Delete</button>
-        </div>
+        </div> -->
     </div>
 
 
