added form validation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Fill in the details for the course below</h1>
+    <h1 id='message'>Fill in the details for the course below</h1>
 
     <form action="" id="details">
 
